--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>learning JavaScript=""</title>
+    <meta name="author"content="Rasoul Edris">
+    <meta name="describtion"content="learning JavaScript by bulding a JavaScript Form">
+    <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 
   </body>
+  <footer>
+    <blockquote cite="" >
+  </footer>
 </html>
