--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
   </body>
   <footer>
-    <blockquote cite="" >
+    <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
   </footer>
 </html>
