--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
   </body>
   <footer>
     <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
+      <!-- Date Accessed: 20220204 -->
+    <p><strong>  Don't quit. Suffer know and live the rest of your life as a champion </strong></p>
+    <p>
+    <em>
+    <a>Mohammad Ali</a>
+   </em>
+   </p>
+      &copy Rasoul Edris, powered by Rasoul in GitHub
   </footer>
 </html>
