--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>learning JavaScript=""</title>
+    <title>learning JavaScript</title>
     <meta name="author"content="Rasoul Edris">
     <meta name="describtion"content="learning JavaScript by bulding a JavaScript Form">
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
