--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-
+<header></header>
+<nav></nav>
+<aside></aside>
+<section><article></articale></section>
   </body>
   <footer>
     <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
@@ -17,6 +20,7 @@
     <p><strong>  Don't quit. Suffer know and live the rest of your life as a champion </strong></p>
     <p>
     <em>
+      <a
     <a>Mohammad Ali</a>
    </em>
    </p>
