--- a/childePages/template.html
+++ b/childePages/template.html
@@ -5,6 +5,21 @@
     <title></title>
   </head>
   <body>
-
+    <header></header>
+    <nav></nav>
+    <aside></aside>
+    <section><article></articale></section>
   </body>
+  <footer>
+    <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
+      <!-- Date Accessed: 20220204 -->
+    <p><strong>  Don't quit. Suffer know and live the rest of your life as a champion </strong></p>
+    <p>
+    <em>
+      <a
+    <a>Mohammad Ali</a>
+   </em>
+   </p>
+      &copy Rasoul Edris, powered by Rasoul in GitHub
+  </footer>
 </html>
