--- a/index.html
+++ b/index.html
@@ -9,21 +9,34 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-<header></header>
-<nav></nav>
+<header><h1>JavaScript Assignments</h1></header>
+<nav>
+<ol>
+  <li> <a href="childPage/Max of Two Numbers.html" target="_blank"> Max of Two Numbers
+  <li> <a href="childPage/Landscape or Portrait.html" target="_blank"> Landscape or Portrait
+  <li> <a href="childPage/Modules Assignment" target="_blank">Modules Assignment
+  <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
+  <li> <a href="childPage/Demerit Points.html" target="_blank">Demerit Points
+  <li> <a href="childPage/FizzBuzz.html" target="_blank">FizzBuzz
+  <li> <a href="childPage/Greeting someone.html" target="_blank">Greeting someone
+</ol>
+</nav>
 <aside></aside>
 <section><article></articale></section>
+
+  <script src="scripts/index.js"> </script>
   </body>
   <footer>
-    <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
-      <!-- Date Accessed: 20220204 -->
-    <p><strong>  Don't quit. Suffer know and live the rest of your life as a champion </strong></p>
-    <p>
-    <em>
-      <a
-    <a>Mohammad Ali</a>
-   </em>
-   </p>
-      &copy Rasoul Edris, powered by Rasoul in GitHub
+    <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+     <!-- Date Accessed: 20220204 -->
+     <p><strong>Getting information off the Interent is like taking a dring from a firehose.</strong></p>
+     <p>
+       <em>
+         <a href="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+           Mitch Kapor
+         </a>
+       </em>
+     </p>
+     &copy Rasoul Edris, powered by Rasoul0 in GitHub
   </footer>
 </html>
