--- a/childePages/template.html
+++ b/childePages/template.html
@@ -11,15 +11,16 @@
     <section><article></articale></section>
   </body>
   <footer>
-    <blockquote cite="https://www.lifehack.org/568195/100-inspirational-quotes-make-you-love-life-again" >
-      <!-- Date Accessed: 20220204 -->
-    <p><strong>  Don't quit. Suffer know and live the rest of your life as a champion </strong></p>
-    <p>
-    <em>
-      <a
-    <a>Mohammad Ali</a>
-   </em>
-   </p>
-      &copy Rasoul Edris, powered by Rasoul in GitHub
+    <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+     <!-- Date Accessed: 20220204 -->
+     <p><strong>Getting information off the Interent is like taking a dring from a firehose.</strong></p>
+     <p>
+       <em>
+         <a href="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+           Mitch Kapor
+         </a>
+       </em>
+     </p>
+     &copy Rasoul Edris, powered by Rasoul0 in GitHub
   </footer>
 </html>
