Update Max of Two Numbers.html

--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <header></header>
+    <header>Max of Two Numbers</header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
