--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <aside></aside>
 <section><article></articale></section>
 
-  <script src="scripts/index.js"> </script>
+  <scripts src="scripts/index.js"> </scripts>
+  <scripts src="scripts/Max of Two Numbers.js"> </scripts>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
