--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -9,6 +9,7 @@
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
+      <scripts src="scripts/Max of Two Numbers.js"> </scripts>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
