--- a/childePages/template.html
+++ b/childePages/template.html
@@ -2,10 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Template</title>
+    <meta name="author"content="Rasoul Edris">
+    <meta name="description"content="">
+    <meta name="keywords"content="">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header></header>
+    <header>Template</header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
