--- a/childePages/Greeting someone.html
+++ b/childePages/Greeting someone.html
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Max of Two Numbers</title>
+    <title></title>
   </head>
   <body>
-    <header>Max of Two Numbers</header>
+    <header>Greeting someone</header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
-      <scripts src="scripts/Max of Two Numbers.js"></scripts>
+      <scripts src="scripts/Greeting someone.js"></scripts>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
