--- a/childePages/template.html
+++ b/childePages/template.html
@@ -13,6 +13,8 @@
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
+
+      <script src="scripts/TemplateJS.js"</script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
