--- a/childePages/Greeting someone.html
+++ b/childePages/Greeting someone.html
@@ -9,7 +9,7 @@
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
-      <scripts src="scripts/Greeting someone.js"></scripts>
+      <script src="scripts/Greeting someone.js"></script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
