--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -10,7 +10,7 @@
     <aside></aside>
     <section><article></articale></section>
 
-      <scripts src="scripts/Max of Two Numbers.js"></scripts>
+      <script src="scripts/Max of Two Numbers.js"></script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
