--- a/childePages/Demerit Points.html
+++ b/childePages/Demerit Points.html
@@ -9,7 +9,7 @@
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
-      <script src="scripts/Demerit Points.js"></script>
+      <script src="Scripts/Demerit Points.js"></script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
