Update Max of Two Numbers.html

--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -2,27 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Max of Two Numbers</title>
+    <title></title>
   </head>
   <body>
     <header>Max of Two Numbers</header>
     <nav></nav>
     <aside></aside>
-    <section><article></articale></section>
+    <section><article></article></section>
 
-      <script src="scripts/Max of Two Numbers.js"></script>
+    <script src="Scripts/Max of Two Numbers.js"></script>
+
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
-     <!-- Date Accessed: 20220204 -->
-     <p><strong>Getting information off the Interent is like taking a dring from a firehose.</strong></p>
-     <p>
-       <em>
-         <a href="https://www.brainyquote.com/quotes/mitch_kapor_163583">
-           Mitch Kapor
-         </a>
-       </em>
-     </p>
-     &copy Rasoul Edris, powered by Rasoul0 in GitHub
+    <!-- Date Accessed: 20220204 -->
+    <p><strong>Getting information off the Interent is like taking a dring from a firehose.</strong></p>
+    <p>
+      <em>
+        <a href="https://www.brainyquote.com/quotes/mitch_kapor_163583">
+          Mitch Kapor
+        </a>
+      </em>
+    </p>
+    &copy Mark Mercer, powered by MercersKitchen in GitHub
   </footer>
 </html>
