--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header><h1>JavaScript Assignments</h1></header>
 <nav>
 <ol>
-  <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
+  <li> <a herf="childpage/Max of Two Numbers.html" target="_blank"> Max of Two Numbers
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
@@ -24,7 +24,7 @@
 <aside></aside>
 <section><article></articale></section>
 
-  <scripts src="scripts/index.js"> </scripts>
+  <scripts src="scripts/index.js"></scripts>
 
   </body>
   <footer>
