--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <ol>
   <li> <a href="childePages/Max of Two Numbers" target="_blank">Max of Two Numbers
   <li> <a href="childePages/Landscape or Portrait.html" target="_blank">Landscape or Portrait
-  <li> <a href="childePageschildePageschildePageschildePageschildePages/Modules Assignment.html" target="_blank">Modules Assignment
-  <li> <a href="childePageschildePageschildePageschildePages/Ordering Grades.html" target="_blank">Ordering Grades
-  <li> <a href="childePageschildePageschildePages/Demerit Points.html" target="_blank">Demerit Points
-  <li> <a href="childePageschildePages/FizzBuzz.html" target="_blank">FizzBuzz
+  <li> <a href="childePages/Modules Assignment.html" target="_blank">Modules Assignment
+  <li> <a href="childePages/Ordering Grades.html" target="_blank">Ordering Grades
+  <li> <a href="childePages/Demerit Points.html" target="_blank">Demerit Points
+  <li> <a href="childePagess/FizzBuzz.html" target="_blank">FizzBuzz
   <li> <a href="childePages/Greeting someone.html" target="_blank">Greeting someone
 </ol>
 </nav>
