--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <li> <a href="childePages/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childePages/Ordering Grades.html" target="_blank">Ordering Grades
   <li> <a href="childePages/Demerit Points.html" target="_blank">Demerit Points
-  <li> <a href="childePagess/FizzBuzz.html" target="_blank">FizzBuzz
+  <li> <a href="childePages/FizzBuzz.html" target="_blank">FizzBuzz
   <li> <a href="childePages/Greeting someone.html" target="_blank">Greeting someone
 </ol>
 </nav>
