--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -10,7 +10,7 @@
     <aside></aside>
     <section><article></article></section>
 
-    <script src="Scripts/Max of Two Numbers.js"></script>
+    <script src="scripts/Max of Two Numbers.js"></script>
 
   </body>
   <footer>
