Update Max of Two Numbers.html

--- a/childePages/Max of Two Numbers.html
+++ b/childePages/Max of Two Numbers.html
@@ -24,6 +24,6 @@
         </a>
       </em>
     </p>
-    &copy Mark Mercer, powered by MercersKitchen in GitHub
+    &copy Rasoul Edris , powered by Rasoul0 in GitHub
   </footer>
 </html>
