--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <header><h1>JavaScript Assignments</h1></header>
 <nav>
 <ol>
-  <li> <a href="childePages/Max of Two Numbers.html" target="_blank">Max of Two Numbers
-  <li> <a href="childePages/Landscape or Portrait.html" target="_blank">Landscape or Portrait
-  <li> <a href="childePages/Modules Assignment.html" target="_blank">Modules Assignment
-  <li> <a href="childePages/Ordering Grades.html" target="_blank">Ordering Grades
-  <li> <a href="childePages/Demerit Points.html" target="_blank">Demerit Points
-  <li> <a href="childePages/FizzBuzz.html" target="_blank">FizzBuzz
-  <li> <a href="childePages/Greeting someone.html" target="_blank">Greeting someone
+  <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
+  <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
+  <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
+  <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
+  <li> <a href="childPage/Demerit Points.html" target="_blank">Demerit Points
+  <li> <a href="childPage/FizzBuzz.html" target="_blank">FizzBuzz
+  <li> <a href="childPage/Greeting someone.html" target="_blank">Greeting someone
 </ol>
 </nav>
 <aside></aside>
