--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Max of Two Numbers</title>
+    <title></title>
   </head>
   <body>
-    <header>Max of Two Numbers</header>
+    <header>Demerit Points</header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
