--- a/childPage/Modules Assignment.html
+++ b/childPage/Modules Assignment.html
@@ -5,7 +5,7 @@
     <title>Max of Two Numbers</title>
   </head>
   <body>
-    <header>Max of Two Numbers</header>
+    <header>Moudules Assignment</header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
