--- a/childPage/FizzBuzz.html
+++ b/childPage/FizzBuzz.html
@@ -5,7 +5,7 @@
     <title></title>
   </head>
   <body>
-    <header>FizzBuzz</header>
+    <header><strong>FizzBuzz</strong></header>
     <nav></nav>
     <aside></aside>
     <section><article></articale></section>
