--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -2,7 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>First Assignment</title>
+    <meta name="author"content="Rasoul Edris">
+    <meta name="describtion"content="Comparing two numbers, find the larger">
+    <meta name="Keywords"content="Inequality, comparsion">
+    <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>Max of Two Numbers</header>
@@ -11,10 +15,12 @@
     <section>
       <article> Description of Assignment
         <ul>
-          <li> Problem:
-          <li> Test cases:
+          <li> Problem:write a function that takes two numbers and returns to maxumim of the two numbers
+          <li> Three test cases exist:
             <ul>
-              <li>
+            <li> Number A > Number B
+            <li> Number A < Number B
+            <li> Number A = Number B
             </ul>
           <li> Use strings? to return calculated answer?
             <ul>
@@ -40,61 +46,7 @@
         <label for="textfield">Number2:</label>
         <input name="textfield2" type="text" id="textField2">
       </p>
-      <p>
-        <!-- Text Area is mutliline plain text editting control-->
-        <label for="tArea">Text Area or Box: </label>
-        <textarea type="tArea" cols="20" rows="4" id="password"></textarea>
-      </p>
       <p>&nbsp</p>
-
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio1" id="radioGroup1_0">
-          Radio 1
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio2" id="radioGroup1_1">
-          Radio 2
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio3" id="radioGroup1_2">
-          Radio 3
-        </label>
-        <br>
-      </fieldset>
-
-      <p>&nbsp</p>
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox1" id="checkboxGroup1_0">
-          Checkbox 1
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox2" id="checkboxGroup1_1">
-          Checkbox 2
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox3" id="checkboxGroup1_2">
-          Checkbox 3
-        </label>
-        <br>
-      </fieldset>
 
       <!--Submit Button-->
       <br><br>
