Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -57,6 +57,7 @@
       </h3>
       <article></article>
 
+<script src="../scripts/Max of Two Numbers.js"></script>
     </section>
     <aside><p></p></aside>
     <section><h3></h3><article><p></p></article></section>
