Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -53,7 +53,7 @@
       <button type="button" onclick="main()">Submit</button>
       <br>
       <h3>The answer is:
-        <a id="">What is the Answer?!!!</a>
+        <a id="answer">What is the Answer?!!!</a>
       </h3>
       <article></article>
 
