Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -41,10 +41,12 @@
       <p>
         <label for="textfield">Number1:</label>
         <input name="textfield1" type="text" id="textField1">
+        <a id="validityTest1"> See the Alert</a>
       </p>
       <p>
         <label for="textfield">Number2:</label>
         <input name="textfield2" type="text" id="textField2">
+        <a id="validityTest1"> See the Alert</a>
       </p>
       <p>&nbsp</p>
 
