Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -29,10 +29,17 @@
         </ul>
       </article>
     </section>
+
     <section>
-
-  
-
+      <!--Submit Button-->
+        <br><br>
+        <button type="button" onclick="main()">Submit</button>
+        <br>
+        <h3>The answer is:
+          <a id="answer">What is the Answer?!!!</a>
+        </h3>
+    </section>
+    <section>
     <script src="scripts/Max of Two Numbers.js"></script>
 
   </body>
