Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -32,14 +32,20 @@
 
     <section>
       <!--Submit Button-->
-        <br><br>
+      <fieldset>
+        <p>
+          <label for="textfield">Number 1:</label>
+          <input name="textfield1" type="text" id="textfield1">
+        </p>
+      </fieldset>
+      <br><br>
         <button type="button" onclick="main()">Submit</button>
         <br>
-        <h3>The answer is:
-          <a id="answer">What is the Answer?!!!</a>
+        <h3> You are connected
+          <a id="answer"></a>
         </h3>
     </section>
-  
+
     <script src="scripts/Max of Two Numbers.js"></script>
 
   </body>
