--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -38,11 +38,12 @@
           <input name="textfield1" type="text" id="textfield1">
         </p>
       </fieldset>
-      <br><br>
+      
+        <br><br>
         <button type="button" onclick="main()">Submit</button>
         <br>
-        <h3> You are connected
-          <a id="answer"></a>
+        <h3>The answer is:
+          <a id="answer">What is the Answer?!!!</a>
         </h3>
     </section>
 
