Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -45,6 +45,11 @@
           <input name="textfield1" type="text" id="textField1">
           <a id="validityTest1">See the Alert</a>
         </p>
+        <p>
+         <label for="textfield">Number 2:</label>
+         <input name="textfield2" type="text" id="textField2">
+         <a id="validityTest2">Type a Number</a>
+       </p>
       </fieldset>
 
       <br><br>
