--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>First Assignment</title>
-    <meta name="author"content="Rasoul Edris">
-    <meta name="describtion"content="Comparing two numbers, find the larger">
-    <meta name="Keywords"content="Inequality, comparsion">
-    <meta name="viewport"content="width=device-width, initial-scale=1.0">
-  </head>
+<head>
+  <meta charset="utf-8">
+  <title>First Assignment</title>
+  <meta name="author" content="Mark Mercer">
+  <meta name="description" content="Comparing two number, find the larger">
+  <meta name="keywords" content="Inequality, comparisons">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
   <body>
-    <header>Max of Two Numbers</header>
-    <nav>
-    </nav>
+    <header><h1>Max of Two Numbers Assignment</h1></header>
+    <nav></nav>
+    <aside></aside>
     <section>
-      <article> Description of Assignment
+      <article>Description of Assignment
         <ul>
-          <li> Problem:write a function that takes two numbers and returns to maxumim of the two numbers
+          <li> Problem: write a function that takes two numbers and returns the maximum of the two
           <li> Three test cases exist:
             <ul>
-            <li> Number A > Number B
-            <li> Number A < Number B
-            <li> Number A = Number B
+              <li> Number A > Number B
+              <li> Number A < Number B
+              <li> Number A = Number B
             </ul>
-          <li> Use strings? to return calculated answer?
+          <li> Use strings to return calculated answer
             <ul>
-              <li> Examples:
+              <li> Examples: larger, smaller, equal
             </ul>
         </ul>
       </article>
     </section>
-
 
     <section>
 
@@ -43,13 +42,13 @@
         <p>
           <label for="textfield">Number 1:</label>
           <input name="textfield1" type="text" id="textField1">
-          <a id="validityTest1">See the Alert</a>
+          <a id="validityTest1">Type a Number</a>
         </p>
         <p>
-         <label for="textfield">Number 2:</label>
-         <input name="textfield2" type="text" id="textField2">
-         <a id="validityTest2">Type a Number</a>
-       </p>
+          <label for="textfield">Number 2:</label>
+          <input name="textfield2" type="text" id="textField2">
+          <a id="validityTest2">Type a Number</a>
+        </p>
       </fieldset>
 
       <br><br>
@@ -58,7 +57,9 @@
       <h3>Are you connected
         <a id="answer"></a>
       </h3>
-    <script src="scripts/Max of Two Numbers.js"></script>
+    </section>
+
+    <script src="../Scripts/Max of Two Numbers.js"></script>
 
   </body>
   <footer>
@@ -72,6 +73,6 @@
         </a>
       </em>
     </p>
-    &copy Rasoul Edris , powered by Rasoul0 in GitHub
+    &copy Mark Mercer, powered by MercersKitchen in GitHub
   </footer>
 </html>
