Update Max of Two Numbers.html

--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -59,7 +59,7 @@
       </h3>
     </section>
 
-    <script src="../Scripts/Max of Two Numbers.js"></script>
+    <script src="../scripts/Max of Two Numbers.js"></script>
 
   </body>
   <footer>
