--- a/childPage/Max of Two Numbers.html
+++ b/childPage/Max of Two Numbers.html
@@ -54,12 +54,10 @@
       <br><br>
       <button type="button" onclick="main()">Submit</button>
       <br>
-      <h3>Are you connected
-        <a id="answer"></a>
-      </h3>
+      <h3><a id="answer"> Are you connected </a> </h3>
     </section>
 
-  <script src="../scripts/Max of Two Numbers.js"></script>
+<script src="../scripts/Max of Two Numbers.js"></script>
 
   </body>
   <footer>
