--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Child Template</title>
+    <title>Demerit Points</title>
     <meta name="author" content="Mark Mercer">
     <meta name="description" content="">
     <meta name="keywords" content="">
