--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header><h1>Child Template</h1></header>
+    <header><h1>Demerit Points</h1></header>
       <nav>
       </nav>
       <section>
