--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Demerit Points</title>
-    <meta name="author" content="Mark Mercer">
+    <title></title>
+    <meta name="author" content="Rasoul Edris">
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
