--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -130,7 +130,7 @@
       </em>
     </p>
     <p>
-      &copy Mark Mercer, powered by MercersKitchen in GitHub
+      &copy Rasoul Edris, powered by Rasoul0 in GitHub
     </p>
   </footer>
 </html>
