Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="author" content="Rasoul Edris">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>Landscape or Portrait</header>
@@ -11,15 +15,18 @@
     <section>
       <article> Description of Assignment
         <ul>
-          <li> Problem:
+          <li> Problem: Calculate if geometery is landscape, portrait, or square
           <li> Test cases:
-            <ul>
-              <li>
+          <ul>
+          <li> input is width numer and hieght Number1
+          <li> Examples of images, Screens, display, ect,
             </ul>
-          <li> Use strings? to return calculated answer?
+          <li> Return the word for the calculated result
             <ul>
-              <li> Examples:
-            </ul>
+          <li> Examples: landscape is width > height
+          <li> Examples: portrait is width < height
+          <li> Examples: Square is width = height
+           </ul>
         </ul>
       </article>
     </section>
