--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -53,56 +53,6 @@
         <textarea type="tArea" cols="20" rows="4" id="password"></textarea>
       </p>
       <p>&nbsp</p>
-
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio1" id="radioGroup1_0">
-          Radio 1
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio2" id="radioGroup1_1">
-          Radio 2
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio3" id="radioGroup1_2">
-          Radio 3
-        </label>
-        <br>
-      </fieldset>
-
-      <p>&nbsp</p>
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox1" id="checkboxGroup1_0">
-          Checkbox 1
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox2" id="checkboxGroup1_1">
-          Checkbox 2
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox3" id="checkboxGroup1_2">
-          Checkbox 3
-        </label>
-        <br>
-      </fieldset>
-
       <!--Submit Button-->
       <br><br>
       <button type="button" onclick="main()">Submit</button>
@@ -115,8 +65,7 @@
     </section>
     <aside><p></p></aside>
     <section><h3></h3><article><p></p></article></section>
-      <script src="scripts/Landscape or Portrait.js"></script>
-
+       <script src="../scripts/Landscape or Portrait.js"></script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
