Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -39,6 +39,8 @@
       <p>&nbsp;</p>
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
+       <fieldset>
+         <legend> Enter the display Geometery</legend>
       <p>
         <label for="textfield">Number1:</label>
         <input name="textfield1" type="text" id="textField1">
@@ -47,6 +49,7 @@
         <label for="textfield">Number2:</label>
         <input name="textfield2" type="text" id="textField2">
       </p>
+    </fieldset>
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
@@ -54,7 +57,7 @@
       <br>
       <h3>The answer is:
         <a id="">What is the Answer?!!!</a>
-      </h3>
+      </h3> Display Geometery is <a id=""> </a><h3>
       <article></article>
 
     </section>
