--- a/childPage/Ordering Grades.html
+++ b/childPage/Ordering Grades.html
@@ -12,20 +12,20 @@
     <header><strong>Ordering Grades</strong></header>
     <nav>
     </nav>
-    <section>
-      <article> Description of Assignment
+    <section> Discription of the Assighnment 
+      <article>
         <ul>
-          <li> Problem: Calculate if geometery is landscape, portrait, or square
-          <li> Test cases:
+          <li>
+          <li>
           <ul>
-          <li> input is width numer and hieght Number1
-          <li> Examples of images, Screens, display, ect,
+          <li>
+          <li>
             </ul>
-          <li> Return the word for the calculated result
+          <li>
             <ul>
-          <li> Examples: landscape is width > height
-          <li> Examples: portrait is width < height
-          <li> Examples: Square is width = height
+          <li>
+          <li>
+          <li>
            </ul>
         </ul>
       </article>
