--- a/childPage/Demerit Points.html
+++ b/childPage/Demerit Points.html
@@ -31,6 +31,9 @@
           <li> 115 km/h: 9 points
           <li> 130 km/h: Lisence suspended
            </ul>
+           <ul>
+           <li> Coding Hints
+           <li>
 
       </article>
     </section>
@@ -44,16 +47,16 @@
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
        <fieldset>
-         <legend> Enter the display Geometery</legend>
+         <legend> Enter the speed ... and speed limit if .js is programmed for it</legend>
       <p>
-        <label for="textfield">Number1:</label>
+        <label for="textfield">Speed:</label>
         <input name="textfield1" type="text" id="textField1">
       </p>
       <p>
-        <label for="textfield">Number2:</label>
+        <label for="textfield">Speed Limit :</label>
         <input name="textfield2" type="text" id="textField2">
       </p>
-    </fieldset>
+
       <p>&nbsp</p>
       <!--Submit Button-->
       <br><br>
@@ -62,6 +65,7 @@
       <h3>The answer is:
         <a id="">What is the Answer?!!!</a>
       </h3> Display Geometery is <a id=""> </a><h3>
+        </fieldset>
       <article></article>
 
     </section>
