--- a/childPage/FizzBuzz.html
+++ b/childPage/FizzBuzz.html
@@ -3,24 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-  </head>
+    <meta name="author" content="Rasoul Edris">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   </head>
   <body>
-    <header><strong>FizzBuzz</strong></header>
+    <header><strong>FizzBuzz Assighnment</strong></header>
     <nav>
     </nav>
-    <section>
-      <article> Description of Assignment
-        <ul>
-          <li> Problem:
-          <li> Test cases:
-            <ul>
-              <li>
-            </ul>
-          <li> Use strings? to return calculated answer?
-            <ul>
-              <li> Examples:
-            </ul>
-        </ul>
+    <section> Discription of the Assighnment
+      <article>
+           <ul>
+          <li> Problem: Complete Popular Interview Question
+          <li> :Input = Number
+          <li>  :Output: string
+          <li> : Processing
+            <li> :if divisible by 3: fizz
+              <li> :if divisible by both: fizzbuzz
+              <li> :if not divisible by 3 or 5: repeat the input
+             <li> : remember to use NaN Function(see JavaScript form)
+              <li>  Note: review division rules
+              <ul>
+
       </article>
     </section>
     <section>
@@ -32,69 +37,14 @@
       <p>&nbsp;</p>
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
+       <fieldset>
+         <legend> Enter the speed ... and speed limit if .js is programmed for it</legend>
       <p>
         <label for="textfield">Number1:</label>
         <input name="textfield1" type="text" id="textField1">
       </p>
-      <p>
-        <label for="textfield">Number2:</label>
-        <input name="textfield2" type="text" id="textField2">
-      </p>
-      <p>
-        <!-- Text Area is mutliline plain text editting control-->
-        <label for="tArea">Text Area or Box: </label>
-        <textarea type="tArea" cols="20" rows="4" id="password"></textarea>
-      </p>
-      <p>&nbsp</p>
-
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio1" id="radioGroup1_0">
-          Radio 1
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio2" id="radioGroup1_1">
-          Radio 2
-        </label>
-        <br>
-        <label>
-          <input type="radio" name="RadioGroup1" value="radio3" id="radioGroup1_2">
-          Radio 3
-        </label>
-        <br>
-      </fieldset>
 
       <p>&nbsp</p>
-      <fieldset>
-        <legend> Case Studies</legend>
-        <div> TestCases
-          <ul>
-            <li>
-          </ul>
-        </div>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox1" id="checkboxGroup1_0">
-          Checkbox 1
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox2" id="checkboxGroup1_1">
-          Checkbox 2
-        </label>
-        <br>
-        <label>
-          <input type="checkbox" name="CheckboxGroup1" value="checkbox3" id="checkboxGroup1_2">
-          Checkbox 3
-        </label>
-        <br>
-      </fieldset>
 
       <!--Submit Button-->
       <br><br>
@@ -102,14 +52,14 @@
       <br>
       <h3>The answer is:
         <a id="">What is the Answer?!!!</a>
-      </h3>
+      </h3>  <a id=""> </a><h3>
+        </fieldset>
       <article></article>
 
     </section>
     <aside><p></p></aside>
     <section><h3></h3><article><p></p></article></section>
-      <script src="scripts/FizzBuzz.js"></script>
-
+       <script src="../scripts/Landscape or Portrait.js"></script>
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
