--- a/childPage/Greeting someone.html
+++ b/childPage/Greeting someone.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    body{
+    background-color: lightblue;
+  }
     <header><strong>Greeting Someone Assignment<strong></header>
     <nav>
     </nav>
@@ -42,7 +45,7 @@
       <!-- See: https://www.w3schools.com/html/html_entities.asp-->
       <!-- Non-breaking real space, adds real space to the webapge that is not elminiated by the browser (hard coded space)  -->
 
-         
+
       <p>
         <label for="textfield">Number1:</label>
         <input name="textfield1" type="text" id="textField1">
