--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
   <scripts src="scripts/index.js"></scripts>
 
+  <style>
+  body{
+    background-color: Linen;
+  }
+
   </body>
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
