--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
   body{
     background-color: Tomato;
   }
-
+</style>
   </body>
+
   <footer>
     <blockquote cite="https://www.brainyquote.com/quotes/mitch_kapor_163583">
      <!-- Date Accessed: 20220204 -->
