--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
   body{
     background-color: Tomato;
   }
+  li a {
+  display: block;
+  width: 60px;
+  background-color: #dddddd;
+}
 </style>
   </body>
 
