--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
   <scripts src="scripts/index.js"></scripts>
 
   <style>
-  
+
   li a {
   display: block;
   width: 165px;
-  background-color: #violet;
+  background-color: #ff6347;
 }
 </style>
   </body>
