--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
   width: 165px;
   background-color: #ff6347;
 }
-  li{
+  li a {
 
 float: left;
-
+  display: block;
+  width: 10px;
+  background-color: #ff6347;
   }
 ]
 </style>
