--- a/index.html
+++ b/index.html
@@ -28,20 +28,26 @@
 
   <style>
 
-  li a {
-
-  display: block;
-  width: 165px;
-  background-color: #ff6347;
-}
-  li a {
-
-float: left;
-  display: block;
-  
-  background-color: #ff6347;
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
   }
-]
+
+  li {
+    float: left;
+  }
+
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
 </style>
   </body>
 
