--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color:Lightblue;
+    background-color: Lightblue;
   }
 
   li {
@@ -40,7 +40,7 @@
 
   li a {
     display: block;
-    color: black;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
