--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: Lightblue;
+    background-color: #000000;
   }
 
   li {
