--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   li a {
     display: block;
     color: white;
-    text-align: center;
+    text-align: top;
     padding: 14px 16px;
     text-decoration: none;
   }
