--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   li a {
     display: block;
     color: white;
-    text-align: left;
+    text-align: justify;
     padding: 18px 20px;
     text-decoration: none;
   }
