--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   ol {
     list-style-type: none;
-    margin: 0;
+    margin: auto;
     padding: 0;
     overflow: hidden;
     background-color: #000000;
