--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 <aside></aside>
 <section><article></articale></section>
   <style>
+  center{
+width: 80%;
+padding:8;
+margin: auto;
+}
+
 
   ol {
     list-style-type: none;
