--- a/index.html
+++ b/index.html
@@ -27,14 +27,10 @@
   <style>
 
   ol {
-    center{
-  width: 80%;
-  padding:8;
-  margin: auto;
-  }
+
     list-style-type: none;
-    margin: auto;
-    padding: 0;
+    margin: 0;
+    padding: 10;
     overflow: hidden;
     background-color: #000000;
   }
