--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
-  <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
+  <li> <button type="button" onclick="main()">Submit</button> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
