--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-<button type="button" onclick="main()">Submit</button>
+<button type="button" onclick="main(Max of Two Numbers)">Submit</button>
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
-  <li> <button type="button" onclick="main()">Submit</button> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
+  <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
