--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-<button type="button" onclick="main(Max of Two Numbers)">Submit</button>
+<button type="button" onclick="main(Max of Two Numbers.html)">Submit</button>
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
