--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
-  <body>
-<button type="button" onclick="main(Max of Two Numbers.html)">Submit</button>
+  <body><button type="button" onclick="document.getElementById('Max').innerHTML = Max of Two Numbers()">
+    Max of Two Numbers. </bbutton>
+
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
