--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body><button type="button" onclick="document.getElementById('Max').innerHTML = Max of Two Numbers()">
-    Max of Two Numbers. </bbutton>
+    Max of Two Numbers. </button>
 
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
