--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body><button type="button" onclick="document.getElementById('Max').innerHTML = Max of Two Numbers()">
     Max of Two Numbers. </button>
-
+    <p id="Max"> </p>
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
