--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
-  <body><button type="button" onclick="document.getElementById('Max').innerHTML = Max of Two Numbers()">
+  <body><button type="button" onclick="document.getElementById('Max').innerHTML = childPage/Max of Two Numbers.html()">
     Max of Two Numbers. </button>
     <p id="Max"> </p>
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
