--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
-  <body><button type="button" onclick="document.getElementById('Max').innerHTML = childPage/Max of Two Numbers.html()">
-    Max of Two Numbers. </button>
-    <p id="Max"> </p>
+
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
+  <body><button type="button" onclick="document.getElementById('Max').innerHTML">
+    Max of Two Numbers.
+    <p id="Max"> </p>
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
+    </button>
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
