--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <nav>
 <ol>
   <button type="button" onclick="document.getElementById('Max').innerHTML">
-  color
+  <style= "color:black;">
     <p id="Max"> </p>
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
     </button>
