--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <nav>
 <ol>
   <button type="button" onclick="document.getElementById('Max').innerHTML">
-  <style= "color:black;">
-    <p id="Max"> </p>
+  <h3><a id="Max"> Welcome to Max of Two Number. </a> </h3>
+
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
     </button>
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
