--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
+  <p>
   <button type="button" onclick="document.getElementById('Max').innerHTML">
+    <input
+    <br>
   <h3><a id="Max"> Welcome to Max of Two Number. </a> </h3>
 
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
     </button>
+  </p>
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
   <li> <a href="childPage/Ordering Grades.html" target="_blank">Ordering Grades
