--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-<header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
+    <form action="/Max of Two Numbers.html" method="get" target="_blank">
+ <button type="button" formmethod="post">Max of Two Numbers</button>
+</form>
+    <header><h1 style="background-color:limegreen;">JavaScript Assignments</h1></header>
 <nav>
 <ol>
-   <button type="button" onclick="main()">Submit</button>
-    <label
-    <br>
-  <h3><a id="Max"> Welcome to Max of Two Number. </a> </h3>
-
   <li> <a href="childPage/Max of Two Numbers.html" target="_blank">Max of Two Numbers
   <li> <a href="childPage/Landscape or Portrait.html" target="_blank">Landscape or Portrait
   <li> <a href="childPage/Modules Assignment.html" target="_blank">Modules Assignment
