--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
     <meta name="describtion"content="learning JavaScript by bulding a JavaScript Form">
     <meta name="Keywords"content="learning JavaScript, Bulding a Form, CS20">
     <meta name="viewport"content="width=device-width, initial-scale=1.0">
-  </head>
   <body>
-
-    <header><h1 style="background-color:#000000;"> color:white; JavaScript Assignments</h1>
-
+    <header><h1 style="background-color:#000000;">JavaScript Assignments</h1></head>
+    color: white;
 
     </header>
 <nav>
@@ -34,7 +32,7 @@
   ol {
 
     list-style-type: none;
-    margin: 0;
+    margin: 10;
     padding: 10;
     overflow: hidden;
     background-color: #000000;
