Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -27,7 +27,7 @@
           <li> Examples: portrait is width < height
           <li> Examples: Square is width = height
            </ul>
-        </ul>
+
       </article>
     </section>
     <section>
@@ -46,8 +46,8 @@
         <input name="textfield1" type="text" id="textField1">
       </p>
       <p>
-        <label for="textfield">Number2:</label>
-        <input name="textfield2" type="text" id="textField2">
+        <label for="width">Number2:</label>
+        <input name="width" type="text" id="textField2">
       </p>
     </fieldset>
       <p>&nbsp</p>
