--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -11,6 +11,28 @@
   <body>
     <header>Landscape or Portrait</header>
     <nav>
+      <style>
+      ul {
+
+          list-style-type: none;
+          margin: 0;
+          padding: 15;
+          overflow: hidden;
+          background-color: #000000;
+        }
+
+        li {
+          display: block;
+          float: left;
+          text-align: justify;
+          padding: 18px 25px;
+          text-decoration: none;
+        }
+
+        li a {
+          color: white;
+        }
+        </style>
     </nav>
     <section>
       <article> Description of Assignment
@@ -46,9 +68,10 @@
         <input name="textfield1" type="text" id="textField1">
       </p>
       <p>
-        <label for="width">Number2:</label>
-        <input name="width" type="text" id="textField2">
+        <label for="textfield">Number2:</label>
+        <input name="textfield2" type="text" id="textfield2">
       </p>
+
     </fieldset>
       <p>&nbsp</p>
       <!--Submit Button-->
