Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -27,7 +27,7 @@
           text-align: justify;
           padding: 18px 25px;
           text-decoration: none;
-      
+
         }
 
 
@@ -40,7 +40,7 @@
           <li> Problem: Calculate if geometery is landscape, portrait, or square
           <li> Test cases:
           <ul>
-          <li> input is width numer and hieght Number1
+          <li> input is width Number and hieght Number1
           <li> Examples of images, Screens, display, ect,
             </ul>
           <li> Return the word for the calculated result
@@ -65,11 +65,11 @@
          <legend> Enter the display Geometery</legend>
       <p>
         <label for="textfield">Number1:</label>
-        <input name="textfield1" type="text" id="textField1">
+        <input name="widthNumber" type="text" id="widthNumber">
       </p>
       <p>
         <label for="textfield">Number2:</label>
-        <input name="textfield2" type="text" id="textfield2">
+        <input name="heightNumber" type="text" id="heightNumber">
       </p>
 
     </fieldset>
@@ -79,7 +79,7 @@
       <button type="button" onclick="main()">Submit</button>
       <br>
       <h3>The answer is:
-        <a id="">What is the Answer?!!!</a>
+        <a id="geo">What is the Answer?!!!</a>
       </h3> Display Geometery is <a id=""> </a><h3>
       <article></article>
 
