--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -40,7 +40,7 @@
           <li> Problem: Calculate if geometery is landscape, portrait, or square
           <li> Test cases:
           <ul>
-          <li> input is width Number and hieght Number1
+          <li> input is width Number and height Number
           <li> Examples of images, Screens, display, ect,
             </ul>
           <li> Return the word for the calculated result
@@ -66,10 +66,12 @@
       <p>
         <label for="textfield">Number1:</label>
         <input name="widthNumber" type="text" id="widthNumber">
+          <a id="validityTest1">Type a Number</a>
       </p>
       <p>
         <label for="textfield">Number2:</label>
         <input name="heightNumber" type="text" id="heightNumber">
+          <a id="validityTest2">Type a Number</a>
       </p>
 
     </fieldset>
