Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>Landscape or Portrait</header>
+    <header><h4>Landscape or Portrait</h4></header>
     <nav>
-      
+
     </nav>
     <section>
       <article> Description of Assignment
