Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-<text-align: center; >  
+<align> center</align>
  <h1>Landscape or Portrait</h1>
 
     </header>
