Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -9,8 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
+    <style>
+
+     h1{
+  text-align: center;
+     }
+
+    </style>
     <header>
-<align> center</align>
+
  <h1>Landscape or Portrait</h1>
 
     </header>
