Update Landscape or Portrait.html

--- a/childPage/Landscape or Portrait.html
+++ b/childPage/Landscape or Portrait.html
@@ -74,13 +74,13 @@
       <button type="button" onclick="main()">Submit</button>
       <br>
       <h3>The answer is:
-        <a id="geo">What is the Answer?!!!</a>
-      </h3> Display Geometery is <a id=""> </a><h3>
+
+      </h3> Display Geometery is <a id="geo"> </a><h3>
       <article></article>
 
     </section>
     <aside><p></p></aside>
-    <section><h3></h3><article><p></p></article></section>
+
        <script src="../scripts/Landscape or Portrait.js"></script>
   </body>
   <footer>
